add py script conversion

--- a/A0Task1.ipynb
+++ b/A0Task1.ipynb
@@ -2,6 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "c3d2b096",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#!jupyter nbconvert --to script A0Task1.ipynb \n",
+    "# converts Jupyter notebook to python script \n",
+    "# uncomment first line and run the cell to do so"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "id": "a89039f6",
    "metadata": {},
