--- a/A0Task1.ipynb
+++ b/A0Task1.ipynb
@@ -127,6 +127,77 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eacc10e4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2, 8 distance 0.00011\n",
+      "3, 8 distance 0.00401\n",
+      "2, 3 distance 0.00412\n",
+      "4, 9 distance 0.01385\n",
+      "4, 7 distance 0.01926\n",
+      "3, 5 distance 0.02458\n",
+      "5, 8 distance 0.02859\n",
+      "2, 5 distance 0.02870\n",
+      "7, 9 distance 0.03310\n",
+      "6, 9 distance 0.04486\n",
+      "2, 6 distance 0.05615\n",
+      "6, 8 distance 0.05626\n",
+      "4, 6 distance 0.05870\n",
+      "3, 6 distance 0.06027\n",
+      "6, 7 distance 0.07796\n",
+      "5, 6 distance 0.08485\n",
+      "2, 9 distance 0.10101\n",
+      "8, 9 distance 0.10112\n",
+      "3, 9 distance 0.10513\n",
+      "2, 4 distance 0.11485\n",
+      "4, 8 distance 0.11497\n",
+      "3, 4 distance 0.11897\n",
+      "0, 5 distance 0.12019\n",
+      "1, 7 distance 0.12870\n",
+      "5, 9 distance 0.12971\n",
+      "2, 7 distance 0.13411\n",
+      "7, 8 distance 0.13422\n",
+      "3, 7 distance 0.13823\n",
+      "4, 5 distance 0.14356\n",
+      "0, 3 distance 0.14478\n",
+      "1, 4 distance 0.14795\n",
+      "0, 8 distance 0.14879\n",
+      "0, 2 distance 0.14890\n",
+      "1, 9 distance 0.16180\n",
+      "5, 7 distance 0.16282\n",
+      "0, 6 distance 0.20505\n",
+      "1, 6 distance 0.20666\n",
+      "0, 9 distance 0.24991\n",
+      "1, 2 distance 0.26281\n",
+      "1, 8 distance 0.26292\n",
+      "0, 4 distance 0.26375\n",
+      "1, 3 distance 0.26693\n",
+      "0, 7 distance 0.28301\n",
+      "1, 5 distance 0.29151\n",
+      "0, 1 distance 0.41171\n"
+     ]
+    }
+   ],
+   "source": [
+    "# closest centers\n",
+    "\n",
+    "pairs = []\n",
+    "for i in range(len(centers)):\n",
+    "    for j in range(i+1, len(centers)):\n",
+    "        pairs.append((i, j, abs(centers[i].mean() - centers[j].mean())))\n",
+    "        \n",
+    "pairs_sorted = sorted(pairs, key=lambda x: x[2])\n",
+    "for (i, j, dist) in pairs_sorted[:]:\n",
+    "    print(f\"{i}, {j} distance {dist:.5f}\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "5ecd98f8",
    "metadata": {},
